Have a sudden change-of-heart and call it python_generate_proto, to align with the other directives

--- a/gazelle/python/testdata/directive_python_generate_proto/test3_disabled_with_proto/BUILD.in
+++ b/gazelle/python/testdata/directive_python_generate_proto/test3_disabled_with_proto/BUILD.in
@@ -1,7 +1,6 @@
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
-# py_generate_proto is not set.
-# nevertheless, py_proto_library is generated.
+# gazelle:python_generate_proto false
 
 proto_library(
     name = "foo_proto",
