--- a/gazelle/python/testdata/directive_python_generate_proto/test5_enabled_with_proto/BUILD.in
+++ b/gazelle/python/testdata/directive_python_generate_proto/test5_enabled_with_proto/BUILD.in
@@ -1,6 +1,6 @@
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
-# gazelle:py_generate_proto false
+# gazelle:python_generate_proto true
 
 proto_library(
     name = "foo_proto",
