--- a/gazelle/python/testdata/directive_python_generate_proto/test1_default_with_proto/BUILD.in
+++ b/gazelle/python/testdata/directive_python_generate_proto/test1_default_with_proto/BUILD.in
@@ -1,7 +1,6 @@
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
-# python_generate_proto is not set.
-# nevertheless, py_proto_library is generated.
+# python_generate_proto is not set, so py_proto_library is not generated.
 
 proto_library(
     name = "foo_proto",
