--- a/gazelle/python/testdata/resolves_proto_imports/test2_generates_using_resolve/BUILD.in
+++ b/gazelle/python/testdata/resolves_proto_imports/test2_generates_using_resolve/BUILD.in
@@ -1,1 +1,1 @@
-# gazelle:resolve py foo.foo_pb2 //bar:bar_py_pb2
+# gazelle:resolve py test2_generates_using_resolve.foo.test2_generates_using_resolve_foo_pb2 //test2_generates_using_resolve/bar:bar_py_pb2
